# cgrammar

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
examples/: ast_dump.rs  context_tweak.rs  custom_attribute.rs  pretty_printer.rs  quasi-quote.rs  shrink_test_case.rs
src/: ast.rs  context.rs  grammar.txt  lexer.rs  lexer2.rs  lib.rs  main.rs  parser.rs  printer.rs  report.rs  span.rs  utils.rs  visitor.rs
tests/: README.md  error-recovery.rs  failed-tests.txt  fuzz-lexer.rs  parse-test.rs  printer-test.rs  quasi-quote.rs  test_lexer.rs  test_lexer_unit_test.rs  test_parser_unit_test.rs  test_parsers.rs  visitor-test.rs
tests/test-cases/unit-tests/: _Lengthof.c  array_init_size_diagnostic.c  c11_alignas_alignof.c  c11_anonymous_struct_union.c  c11_atomic_types.c  c11_complex_numbers.c  c11_generic_advanced.c  c11_noreturn.c  c11_static_assert.c  c11_thread_local.c  c23_attributes.c  c23_auto_type.c  c23_binary_constants.c  c23_bitint_types.c  c23_constexpr.c  c23_decimal_types.c  c23_digit_separators.c  c23_empty_initializer.c  c23_enhanced_enumerations.c  c23_nullptr.c  c23_typeof_unqual.c  c23_unreachable.c  c99_bool_type.c  c99_compound_literals.c  c99_designated_initializers.c  c99_flexible_array_member.c  c99_inline_functions.c  c99_mixed_declarations.c  c99_restrict_qualifier.c  c99_vla_edge_cases.c  edge_anonymous_types.c  edge_asm_statements.c  edge_cast_expressions.c  edge_character_literals.c  edge_complex_declarations.c  edge_complex_expressions.c  edge_control_flow.c  edge_dollar_in_identifiers.c  edge_empty_statements.c  edge_float_literals.c  (+198 more)
