[package]
name = "cgrammar"
version = "0.2.0"
edition = "2024"
description = "A comprehensive C language grammar parser library written in Rust, implementing the C23 standard (ISO/IEC 9899:2023)."
repository = "https://github.com/Wybxc/cgrammar"
license = "Apache-2.0"
readme = "README.md"


[dependencies]
chumsky = { version = "0.10.0", features = ["extension", "pratt", "regex"] }
dbg-pls = { version = "0.4.3", features = [
    "derive",
    "pretty",
], optional = true }
hexf-parse = "0.2.1"
imbl = "6.0.0"
macro_rules_attribute = "0.2.2"
rustc-hash = "2.1.1"
slab = "0.4.11"

[features]
dbg-pls = ["dep:dbg-pls"]

[dev-dependencies]
pathdiff = "0.2.3"
rstest = "0.26.1"
