[package]
name = "cgrammar"
version = "0.8.0"
edition = "2024"
description = "A comprehensive C language grammar parser library written in Rust, implementing the C23 standard (ISO/IEC 9899:2023)."
repository = "https://github.com/Wybxc/cgrammar"
license = "Apache-2.0"
readme = "README.md"


[dependencies]
ariadne = { version = "0.6.0", optional = true }
chumsky = { version = "0.12.0", features = ["extension", "pratt", "regex"] }
dbg-pls = { version = "0.4.3", features = [
    "derive",
    "pretty",
], optional = true }
derive_more = { version = "2.1.1", features = ["index", "index_mut"] }
dyn-clone = { version = "1.0.20", optional = true }
dyn-eq = { version = "0.1.3", optional = true }
elegance = { version = "0.4.0", optional = true }
hexf-parse = "0.2.1"
macro_rules_attribute = "0.2.2"
ordered-float = "5.1.0"
rustc-hash = "2.1.1"

[features]
dbg-pls = ["dep:dbg-pls"]
printer = ["dep:elegance"]
quasi-quote = ["dep:dyn-clone", "dep:dyn-eq"]
report = ["dep:ariadne"]

[dev-dependencies]
pathdiff = "0.2.3"
pretty_assertions = "1.4.1"
rstest = "0.26.1"
